fix(warnings): clear Java diagnostics, salvage branch docs, align precheck gates (#66)
* fix(warnings): clear Java diagnostics and align precheck gates

【症状】IDE Problems 持续出现 Java warning，切换分支后 Trae 还会保留部分 JDT 误报，影响代码质量判断与排查效率。

【根因】
1. 多个 service/test 文件残留未使用 import、未使用私有方法、冗余 @SuppressWarnings。
2. Trae redhat.java 的 jdt_ws 缓存在分支切换后可能保留陈旧索引，导致 IDE diagnostics 与磁盘源码短暂失配。
3. precheck.sh 白名单未同步 HermesEventController、DeadLetterService，且未将 AuthServiceImpl 的历史超长问题按 advisory 处理，导致门禁与既有治理注释不一致。

【横向扫描】
已清理 EnrollmentStatus、CourseAuditServiceImpl、EnrollmentQueryServiceImpl、EnrollmentServiceImpl、GradeServiceImpl、LearningProgressServiceImpl、UserQueryServiceImpl 及 5 个测试文件的 warning；新增 Trae Java 缓存重建脚本；修复 precheck 白名单与 advisory 判定。

【防止再发】
1. 新增 scripts/reset-trae-java-cache.sh，后续分支切换后出现 JDT 漂移时可一键重建缓存。
2. 保持 diagnostics + test-compile + precheck 三重门禁作为 warning 清理提交基线。
3. 将 HermesEventController、DeadLetterService 纳入 precheck 白名单，避免同类误阻断再次发生。

【验证】
1. GetDiagnostics 复查本次纳入文件均为 0。
2. 执行 mvn -DskipTests test-compile 通过。
3. 执行 bash .claude/skills/microcourse/scripts/precheck.sh 通过（仅保留 advisory，不阻断）。

Signed-off-by: Shen Yang <ailyedu@outlook.com>

* docs: salvage design documents from cleaned branches

Pick up ADR-001 (performance observability) and P1 course structure
bidirectional sync plan/spec from branches being retired.

These documents were the only unique content in branches that are
10+ commits behind main. Salvaging them ensures design decisions
remain traceable without keeping stale branches alive.

Signed-off-by: Shen Yang <ailyedu@outlook.com>
Signed-off-by: 总工程师 <engineer@microcourse.local>

* fix(warnings): remove unused HashSet import and fix ADR-001 precheck clash

【症状】OfflineSessionServiceImpl 中 import java.util.HashSet 未被使用，IDE 报 warning。ADR-001 文档中 Prometheus API 引用错误触发 precheck /api/v1 路径检测。

【根因】HashSet import 是历史遗留未清理项；ADR-001 抢救文档中 curl /api/v1/targets 是 Prometheus 原生 API 而非本项目路径，但 precheck grep 无排除该场景的逻辑。

【横向扫描】OfflineSessionServiceImpl.java 内已无 HashSet 使用（